--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "react-dom": "^18.3.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.5",
-    "@octokit/rest": "^21.0.2"
+    "@octokit/rest": "^21.0.2",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
